fix: remove text-align from alignment

--- a/src/mixins/grid.css
+++ b/src/mixins/grid.css
@@ -79,17 +79,14 @@
 @mixin alignment() {
   &-start {
     justify-content: flex-start;
-    text-align: start;
   }
 
   &-center {
     justify-content: center;
-    text-align: center;
   }
 
   &-end {
     justify-content: flex-end;
-    text-align: end;
   }
 
   &-top {
